Removal of code affected by Java 11 update